# CMakeList.txt: Projekt CMake pro Project-BPC-IC1-2023, sem přidejte logiku zdrojového
# kódu a definic specifickou pro projekt.
#
cmake_minimum_required (VERSION 3.8)

project ("Project-BPC-IC1-2023")

# Přidejte zdrojový kód ke spustitelnému souboru tohoto projektu.
 add_executable (Project-BPC-IC1-2023 "Project-BPC-IC1-2023.cpp" "Project-BPC-IC1-2023.h" "flag2.h" "flag2.cpp")

# TODO: V případě potřeby přidejte testy a cíle instalace.
